# HMI_PLC_STM32

./: README.md
HMI_PLC_ALARM/: pump_vibration_alarm.RSS
HMI_PLC_ALARM/AdvancedHMI/: AdvancedHMI.vbproj  MainForm.Designer.vb  MainForm.resx  MainForm.vb
HMI_PLC_ALARM/AdvancedHMI/My Project/: Settings.Designer.vb
HMI_PLC_ALARM/AdvancedHMI/backup_folder/: MainForm.Designer.vb  MainForm.resx  MainForm.vb  MqttClientAHMI.vb
HMI_PLC_ALARM/AdvancedHMIControls/: AdvancedHMIControls.vbproj
HMI_PLC_ALARM/AdvancedHMIDrivers/: AdvancedHMIDrivers.vbproj
Project 1/: pump_project.RSS
Project 10/: project10.RSS
Project 2/: conveyor belts.RSS
Project 8/: project 8.RSS
STM32_Project_v9/: .cproject  .mxproject  .project  STM32_Project_v9.ioc  STM32_Project_v9.launch  USER CODE BEGIN Header 2.txt  USER CODE BEGIN Header.txt
STM32_Project_v9/.metadata/: .log4j2.xml  version.ini
STM32_Project_v9/Core/Inc/: stm32f4xx_hal_conf.h
STM32_Project_v9/Debug/: STM32_Project_v9.elf  STM32_Project_v9.list  STM32_Project_v9.map  makefile  objects.list
backup/april/: main.cpp
backup/may/: main.cpp  mqtt.cpp  mqtt.hpp  telegraf.conf
project 3/: BARCODE.RSS
project 4/: SERVO_PROJECT.RSS
project 5/: pulse_rotameter.RSS
project 6/: project6.RSS
project 7/: project7.RSS
project 9/: project 9.RSS  refreshdata.xls
sourceCode/: CMakeLists.txt  config.yaml  main.cpp
sourceCode/influxdbsql/: spectrum.txt  waveform.txt
sourceCode/mqtt/: mqtt.cpp  mqtt.hpp
sourceCode/telegraf/: telegraf.conf
testing/: test_communication_w_CPP.cpp  test_communication_w_PYTHON.py
(+19 files in other folders)
